Update edges and prevent map from getting squashed

--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -63,5 +63,6 @@ html {
 }
 
 body {
+	background: #1a1a1a;
 	font-size: 1.4rem;
 }
